--- a/Tugas1.html
+++ b/Tugas1.html
@@ -29,8 +29,7 @@
 		<br>
 		<br>
 		<form>
-			<label for="photo">Photo:</label>
-	<input type="file" name="photo" id="photo" accept="image/*"/>
+	Photo: <input type="text" name="photo"><input type="Submit" value="Browse..." name="Browse">
 		<br>
 		<br>
 		Comment:<textarea name="deskripsi" cols="45" rows="5" align="center"></textarea> <input type="Submit" value="Submit" name="Submit">
