--- a/home.html
+++ b/home.html
@@ -1,35 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HOME</title>
-    <link rel="stylesheet" href="file.css">
-    <style type="text/css">
-        body{background-color: yellow;}
-        p.arial{font-size: large; font-family: arial; font-weight: bold;}
-    </style>
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" href="efek.css">
 </head>
-<body>
-<ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="pendidikan.html">PENDIDIKAN</a></li>
-        <li><a href="jadwalkuliah.html">JADWAL KULIAH</a></li>
-        <li><a href="aktivitas.html">AKTIVITAS</a></li>
-        <li><a href="informasilain.html">ANOTHER ME</a></li>
-</ul>
-<center>
-    <h1 class="arial">Memperkenalkan Diri</h1>
-</center>
-<br>
-<br>
-    <p class="arial">Nama Lengkap     : Ahadian Amar M</p>
-    <p class="arial">TTL              : Surabaya, 13 November 2000</p>
-    <p class="arial">Jenis Kelamin    : laki-laki</p>
-    <p class="arial">Agama            : Islam</p>
-    <p class="arial">Umur             : 20 Tahun</p>
-    <p class="arial">Tempat Tinggal   : Surabaya</p>
-    <p class="arial">Alamat           : JL Jemur ngawinan 1/39 Surabaya </p>  
+<body style="color: black ; 
+    background: yellow ; 
+    font-size: 10 ;
+    font-family: Calibre ;"> 
+
+    <div class="c">
+    <ul>
+    <li><a href="Home.html"> HOME </a></li>
+        <li><a href="pendidikan.html"> PENDIDIKAN </a></li>
+        <li><a href="jadwalkuliah.html"> JADWAL KULIAH </a></li>
+        <li><a href="aktivitas.html"> AKTIVITAS </a></li>
+        <li><a href="informasilain.html"> ANOTHER ME  </a></li>
+        <CENTER>
+        <h1>PERKENALAN DIRI</h1>
+        </CENTER>
+    <br>
+    <br>
+    </ul>
+    </div>
+    <div class="home">
+    <center>
+    <form style="width: 1000px" class="posisi">
+        <fieldset class="h">
+            <table style="width: 980px;">
+                <tr>
+                    <td rowspan="15" width="250px"></td>
+                </tr>    
+                <tr>
+                    <td><b>Nama Lengkap</b>
+                    </td>
+                    <td>:</td>
+                    <td>Ahadian Amar M </td>
+                </tr>
+                <tr>
+                    <td><b>Nama Panggilan</b>
+                    </td>
+                    <td>:</td>
+                    <td>Amar</td>
+                </tr>
+                <tr>
+                    <td><b>Tempat, Tanggal Lahir</b>
+                    </td>
+                    <td>:</td>
+                    <td>Surabaya, 13 nov 2000 </td>
+                </tr>
+                <tr>
+                    <td><b>Umur</b>
+                    </td>
+                    <td>:</td>
+                    <td>20 Tahun</td>
+                </tr>
+                <tr>
+                    <td><b>Jenis Kelamin</b>
+                    </td>
+                    <td>:</td>
+                    <td>Laki - Laki</td>
+                </tr>
+                <tr>
+                    <td><b>Gol. Darah</b>
+                    </td>
+                    <td>:</td>
+                    <td>O</td>
+                </tr>
+                <tr>
+                    <td><b>Agama</b>
+                    </td>
+                    <td>:</td>
+                    <td>Islam</td>
+                </tr>
+                <tr>
+                    <td><b>Alamat</b>
+                    </td>
+                    <td>:</td>
+                    <td>Jln. Jemur Ngawinan 1/39 </td>
+                </tr>
+                <tr>
+                    <td><b>Status</b></td>
+                    <td>:</td>
+                    <td>Belum Menikah</td>
+                </tr>
+                <tr>
+                    <td><b>Pekerjaan</b>
+                    </td>
+                    <td>:</td>
+                    <td>Mahasiswa</td>
+                </tr>
+                <tr>
+                    <td><b>Kewarganegaraan</b>
+                    </td>
+                    <td>:</td>
+                    <td>Indonesia</td>
+                </tr>
+                <tr>
+            </table>
+        </fieldset>
+    </form>
+    </center>
+    </div>
 </body>
 </html>
