--- a/pendidikan.html
+++ b/pendidikan.html
@@ -1,33 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PENDIDIKAN  </title>
-    <link rel="stylesheet" href="file.css">
-    <style type="text/css">
-        body{background-color: yellow;}
-        p.arial{font-size: large; font-family: arial; font-weight: bold;}
-    </style>
+    <meta charset="utf-8">
+    <title>PENDIDIKAN</title>
+    <link rel="stylesheet"  href="efek.css">
 </head>
-<body>
-<ul>
+<body style="color: black;
+    background: yellow;
+    font-size: 12;
+    font-family: arial;">
+    <div class="o">
+    <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="pendidikan.html">PENDIDIKAN</a></li>
         <li><a href="jadwalkuliah.html">JADWAL KULIAH</a></li>
         <li><a href="aktivitas.html">AKTIVITAS</a></li>
-        <li><a href="anotherme.html">ANOTHER ME</a></li>
-</ul>
-<center>
-    <h1 class="arial">Pendidikan Yang Telah Di Ampuh</h1>
-</center>
-<br>
-<br>
-    <p class="arial">Nama SD        : SDN SIWALAN KERTO 1 </p>
-    <p class="arial">Nama SMP       : SMPN 13 SURABAYA </p>
-    <p class="arial">Nama SMK       : SMKN 3 SURABAYA </p>
-    <p class="arial">Nama Kampus    : UPN Veteran JATIM </p>
-
+        <li><a href="informasilain.html">ANOTHER ME</a></li>
+    </ul>
+    <center>
+        <h2>PENDIDIKAN</h2>
+    </div>
+    <div class="informasilain">
+    <center>
+    <form style="width: 750px;
+    border: 5px solid green;" class="informasilain">
+        <fieldset class="data">
+            <table style="width: 725px;">
+                <tr>
+                    <td>NAMA SD</td>
+                    <td>:</td>
+                    <td>SDN SIWALAN KERTO 1</td>
+                </tr>
+                <tr>
+                    <td>NAMA SMP</td>
+                    <td>:</td>
+                    <td>SMPN 13 SURABAYA</td>
+                </tr>
+                <tr>
+                    <td>NAMA SMK</td>
+                    <td>:</td>
+                    <td>SMKN 3 SURABAYA</td>
+                </tr>
+                <tr>
+                    <td>NAMA KAMPUS</td>
+                    <td>:</td>
+                    <td>UPN Veteran JATIM</td>
+            </table>
+        </fieldset>
+    </form>
+    </center>
+    </div>
 </body>
 </html>
