--- a/informasilain.html
+++ b/informasilain.html
@@ -1,33 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INFORMASI LAIN</title>
-    <link rel="stylesheet" href="file.css">
-    <style type="text/css">
-        body{background-color: yellow;}
-        p.arial{font-size: large; font-family: arial; font-weight: bold;}
-    </style>
+    <meta charset="utf-8">
+    <title>Informasi Lain</title>
+    <link rel="stylesheet" type="text/css" href="efek.css">
 </head>
-<body>
-<ul>
+<body style="color: black;
+    background: yellow;
+    font-size: 12;
+    font-family: arial;">
+    <div class="o">
+    <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="pendidikan.html">PENDIDIKAN</a></li>
         <li><a href="jadwalkuliah.html">JADWAL KULIAH</a></li>
         <li><a href="aktivitas.html">AKTIVITAS</a></li>
         <li><a href="informasilain.html">ANOTHER ME</a></li>
-</ul>
-<center>
-    <h1 class="arial">Informasi Lain</h1>
-</center>
-<br>
-<br>
-    <p class="arial">Disini Hobi Saya adalah Bermain Game tetapi saya tidak sampai melupakan waktu </p>
-    <p class="arial"> </p>
-    <p class="arial"> </p>
-    <p class="arial"> </p>
-
+    </ul>
+    <center>
+        <h2>INFORMASI LAIN</h2>
+    </div>
+    <div class="informasilain">
+    <center>
+    <form style="width: 750px;
+    border: 5px solid green;" class="informasilain">
+        <fieldset class="data">
+            <table style="width: 725px;">
+                <tr>
+                    <td>Hobi</td>
+                    <td>:</td>
+                    <td>Bermain Game</td>
+                </tr>
+                <tr>
+                    <td>Makanan Favorit</td>
+                    <td>:</td>
+                    <td>Soto Ayam</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Mie Instan</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td>Sayur Asem</td>
+                </tr>
+                <tr>
+                    <td>Instagram</td>
+                    <td>:</td>
+                    <td><a href="https://www.instagram.com/ahadian_amar/">Ahadian_Amar</a></td>
+                </tr>
+                <tr>
+                    <td>Facebook</td>
+                    <td>:</td>
+                    <td><a href="https://www.facebook.com/ahadian.amar/">Ahadian Amar</a></td>
+                <tr>
+                    <td>Github Profile</td>
+                    <td>:</td>
+                    <td><a href="https://github.com/AHADIANAMAR/AMARAHADIAN">Ahadian Amar</a></td>
+                </tr>
+            </table>
+        </fieldset>
+    </form>
+    </center>
+    </div>
 </body>
 </html>
