--- a/aktivitas.html
+++ b/aktivitas.html
@@ -1,16 +1,15 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AKTIVITAS</title>
-   <link rel="stylesheet" href="file.css">
-   <style type="text/css">
-        body{background-color: yellow;}
-        p.arial{font-size: large; font-family: arial; font-weight: bold;}
-    </style>
+    <meta charset="utf-8">
+    <title>Aktivitas</title>
+    <link rel="stylesheet" type="text/css" href="efek.css">
 </head>
-<body>
+<body style="color: black;
+    background: yellow;
+    font-size: 12;
+    font-family: arial;">
+    <div class="o">
     <ul>
         <li><a href="home.html">HOME</a></li>
         <li><a href="pendidikan.html">PENDIDIKAN</a></li>
@@ -19,10 +18,23 @@
         <li><a href="informasilain.html">ANOTHER ME</a></li>
     </ul>
     <center>
-    <h1>Mengikuti Organisasi</h1>
+        <h2>AKTIVITAS</h2>
+    </div>
+    <div class="informasilain">
+    <center>
+    <form style="width: 750px;
+    border: 5px solid green;" class="aktivitas">
+        <fieldset class="data">
+            <table style="width: 725px;">
+                <tr>
+                    <td>Mengikuti Organisasi</td>
+                    <td>:</td>
+                    <td>Tidak Pernah</td>
+                </tr>
+            </table>
+        </fieldset>
+    </form>
     </center>
-    <br>
-    <br>
-    <p class="arial">Aslinya kalau ditanya mengikuti itu tidak pernah tetapi saya pernah mengikuti karang taruna dirumah HEHEHE </p>
-    </body>
-    </html>
+    </div>
+</body>
+</html>
