--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" type="text/css" href="efek.css">
+    <link rel="stylesheet"  href="efek.css">
 </head>
 <body style="color: black ; 
     background: yellow ; 
@@ -32,7 +32,7 @@
         <fieldset class="h">
             <table style="width: 980px;">
                 <tr>
-                    <td rowspan="15" width="250px"></td>
+                    <td rowspan="15" width="250px"><img src="foto.jpg" width="200px" height="px"></td>
                 </tr>    
                 <tr>
                     <td><b>Nama Lengkap</b>
